site: services toggle + assets organized

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!-- index.html -->
 <!doctype html>
-<html lang="pt-BR">
+<html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>NexCX</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
-    <main id="app"></main>
+    <main id="app" class="app">
+      <div class="loading">Carregando…</div>
+    </main>
 
-    <script type="module" src="/script.js"></script>
+    <script src="./script.js" defer></script>
   </body>
 </html>
