increase lateral padding to 50px

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!doctype html>
-<html lang="pt-br">
+<html lang="pt-BR">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NexCX</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
-
   <body>
-    <main id="app" class="app">
-      <div class="loading">Carregando…</div>
-    </main>
+    <div class="app">
+      <div class="shell" id="app"></div>
+    </div>
 
-    <script src="./script.js" defer></script>
+    <script src="/script.js" defer></script>
   </body>
 </html>
