increase lateral padding to 50px

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!doctype html>
-<html lang="pt-BR">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NexCX</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
+
   <body>
     <div class="app">
-      <div class="shell" id="app"></div>
+      <main class="shell" id="app">
+        <div class="loading">Carregando…</div>
+      </main>
     </div>
 
-    <script src="/script.js" defer></script>
+    <script src="./script.js"></script>
   </body>
 </html>
