increase lateral padding to 50px

--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
            SEÇÃO BRANCA
       =================================================== -->
       <section class="whiteSection">
-        <h2 class="h2">O que fazemos</h2>
-        <p class="p">
-          Transformamos os processos internos e a experiência
-          dos clientes da sua empresa.
-        </p>
-      </section>
+  <p class="whiteLead">
+    Transformamos os processos internos e a experiência dos clientes da sua empresa com clareza, método e acompanhamento real.
+  </p>
+
+  <p class="whiteSub">
+    Enquanto você dirige, a NexCX lê o painel, aponta riscos, sugere rotas e ajusta o trajeto.
+  </p>
+</section>
+
 
       <!-- ==================================================
            SERVICES (exemplo)
