increase lateral padding to 50px

--- a/index.html
+++ b/index.html
@@ -48,13 +48,16 @@
       =================================================== -->
       <section class="whiteSection">
   <p class="whiteLead">
-    Transformamos os processos internos e a experiência dos clientes da sua empresa com clareza, método e acompanhamento real.
+    Transformamos os processos internos e a experiência dos clientes da sua empresa
+    com clareza, método e acompanhamento real.
   </p>
 
   <p class="whiteSub">
-    Enquanto você dirige, a NexCX lê o painel, aponta riscos, sugere rotas e ajusta o trajeto.
+    Enquanto você dirige, a NexCX lê o painel, aponta riscos,
+    sugere rotas e ajusta o trajeto.
   </p>
 </section>
+
 
 
       <!-- ==================================================
