increase lateral padding to 50px

--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
       =================================================== -->
       <section class="whiteSection">
   <p class="whiteLead">
-    Transformamos os processos internos e a experiência dos clientes da sua empresa
-    com clareza, método e acompanhamento real.
+    Transformamos os processos<br>
+    internos e a experiência dos<br>
+    clientes da sua empresa<br>
+    com clareza, método<br>
+    e acompanhamento real.
   </p>
+</section>
 
   <p class="whiteSub">
     Enquanto você dirige, a NexCX lê o painel, aponta riscos,
