increase lateral padding to 50px

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     Transformamos os processos<br>
     internos e a experiência dos<br>
     clientes da sua empresa<br>
-    com clareza, método<br>
-    e acompanhamento real.
+    com clareza, método e<br>
+    acompanhamento real.
   </p>
 </section>
 
