increase lateral padding to 50px

--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
     Transformamos os processos<br>
     internos e a experiência dos<br>
     clientes da sua empresa<br>
-    com clareza, método e<br>
-    acompanhamento real.
+    com clareza, método<br>
+    e acompanhamento real.
+  </p>
+
+  <p class="whiteSub">
+    Enquanto você dirige, a NexCX lê o painel,<br>
+    aponta riscos, sugere rotas e ajusta o trajeto.
   </p>
 </section>
 
-  <p class="whiteSub">
-    Enquanto você dirige, a NexCX lê o painel, aponta riscos,
-    sugere rotas e ajusta o trajeto.
-  </p>
-</section>
 
 
 
