increase lateral padding to 50px

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
   </p>
 
   <p class="whiteSub">
-    Enquanto você dirige, a NexCX lê o painel,<br>
-    aponta riscos, sugere rotas e ajusta o trajeto.
+    Enquanto você dirige, a NexCX<br>
+    lê o painel, aponta riscos,<br>
+    sugere rotas e ajusta o trajeto.
   </p>
 </section>
 
