--- a/index.html
+++ b/index.html
@@ -47,19 +47,23 @@
            SEÇÃO BRANCA
       =================================================== -->
       <section class="whiteSection">
-  <div class="whiteTextBlock">
-    <p class="whiteTitle">
-      Transformamos os processos internos e a experiência dos
-      clientes da sua empresa com clareza, método e
-      acompanhamento real
+  <div class="whiteInner">
+    <p class="whiteLead">
+      Transformamos os processos<br>
+      internos e a experiência dos<br>
+      clientes da sua empresa<br>
+      com clareza, método e<br>
+      acompanhamento real.
     </p>
 
     <p class="whiteSub">
-      Enquanto você dirige, a NexCX lê o painel,<br>
-      aponta riscos, sugere rotas e ajusta o trajeto
+      Enquanto você dirige, a NexCX<br>
+      lê o painel, aponta riscos, sugere<br>
+      rotas e ajusta o trajeto.
     </p>
   </div>
 </section>
+
 
 
 
