Add collage-v2.png and update references

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- COLAGEM -->
         <div class="heroImageWrap">
           <img
-            src="/assets/images/collage.png"
+            src="/assets/images/collage-v2.png"
             alt="Colagem NexCX"
             class="heroImage"
           />
