update layout + button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
           </p>
 
           <p class="whiteSub">
-            Enquanto você dirige, a NexCX lê o painel, aponta riscos, sugere rotas e ajusta o trajeto.
+            Enquanto você dirige, a NexCX<br>
+            lê o painel, aponta riscos,<br>
+            sugere rotas e ajusta o trajeto.<br>
           </p>
 
           <a class="whiteCta" href="#contato" aria-label="Vamos conversar">
