update layout + button

--- a/index.html
+++ b/index.html
@@ -88,5 +88,13 @@
 
     </div>
   </div>
+
+  <!-- BOTÃO VOLTAR AO TOPO -->
+<button id="backToTop" aria-label="Voltar ao topo">
+  ↑
+</button>
+
+<script src="script.js"></script>
+
 </body>
 </html>
