update layout + button

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NexCX</title>
 
-  <!-- cache-buster: troca o número quando quiser forçar atualização -->
   <link rel="stylesheet" href="style.css?v=20251221-2100" />
 </head>
 
@@ -13,9 +12,7 @@
   <div class="app">
     <div class="shell">
 
-      <!-- HERO -->
       <section class="hero">
-        <!-- COLAGEM -->
         <div class="heroImageWrap">
           <img
             src="assets/images/collage.png?v=20251221-2100"
@@ -26,7 +23,6 @@
           />
         </div>
 
-        <!-- FUNDO AZUL -->
         <div class="heroContent">
           <h1 class="heroTitle">
             PRECISANDO DE<br />
@@ -39,7 +35,6 @@
         </div>
       </section>
 
-      <!-- WHITE SECTION -->
       <section class="whiteSection">
         <div class="whiteInner">
           <p class="whiteLead">
@@ -53,13 +48,10 @@
             sugere rotas e ajusta o trajeto.<br>
           </p>
 
-          <a class="whiteCta" href="#contato" aria-label="Vamos conversar">
-            Vamos conversar
-          </a>
+          <a class="whiteCta" href="#contato">Vamos conversar</a>
         </div>
       </section>
 
-      <!-- SERVICES -->
       <section class="servicesSection">
         <h2 class="servicesTitle">Serviços</h2>
 
@@ -78,7 +70,6 @@
         </div>
       </section>
 
-      <!-- FOOTER -->
       <footer class="footerSection" id="contato">
         <h3 class="footerTitle">NexCX</h3>
         <p class="footerText">
@@ -89,12 +80,8 @@
     </div>
   </div>
 
-  <!-- BOTÃO VOLTAR AO TOPO -->
-<button id="backToTop" aria-label="Voltar ao topo">
-  ↑
-</button>
+  <button id="backToTop" aria-label="Voltar ao topo">↑</button>
 
-<script src="script.js"></script>
-
+  <script src="script.js?v=20251221-2100"></script>
 </body>
 </html>
