update layout + button

--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NexCX</title>
 
-  <link rel="stylesheet" href="style.css?v=20251221-2100" />
+  <!-- força atualização -->
+  <link rel="stylesheet" href="style.css?v=5">
 </head>
 
 <body>
   <div class="app">
     <div class="shell">
 
+      <!-- HERO -->
       <section class="hero">
         <div class="heroImageWrap">
           <img
-            src="assets/images/collage.png?v=20251221-2100"
+            src="assets/images/collage.png?v=5"
             alt="Colagem NexCX"
             class="heroImage"
-            loading="eager"
-            decoding="async"
           />
         </div>
 
         <div class="heroContent">
           <h1 class="heroTitle">
-            PRECISANDO DE<br />
-            UM <span class="heroBlack">COPILOTO</span> PARA<br />
-            TRANSFORMAR SUA<br />
+            PRECISANDO DE<br>
+            UM <span class="heroBlack">COPILOTO</span> PARA<br>
+            TRANSFORMAR SUA<br>
             EMPRESA?
           </h1>
 
@@ -35,30 +35,34 @@
         </div>
       </section>
 
+      <!-- WHITE SECTION -->
       <section class="whiteSection">
         <div class="whiteInner">
           <p class="whiteLead">
-            Transformamos os processos internos e a experiência dos clientes da sua empresa
-            com clareza, método e acompanhamento real.
+            Transformamos os processos internos e a experiência dos clientes
+            da sua empresa com clareza, método e acompanhamento real.
           </p>
 
           <p class="whiteSub">
-            Enquanto você dirige, a NexCX<br>
-            lê o painel, aponta riscos,<br>
-            sugere rotas e ajusta o trajeto.<br>
+            Enquanto você dirige, a NexCX lê o painel,
+            aponta riscos, sugere rotas e ajusta o trajeto.
           </p>
 
-          <a class="whiteCta" href="#contato">Vamos conversar</a>
+          <a href="#contato" class="whiteCta">
+            Vamos conversar
+          </a>
         </div>
       </section>
 
+      <!-- SERVICES -->
       <section class="servicesSection">
         <h2 class="servicesTitle">Serviços</h2>
 
         <div class="card">
           <h3 class="cardTitle">Mapeamento de processos</h3>
           <p class="cardText">
-            Entendemos o que realmente acontece, identificamos gargalos e redesenhamos o fluxo ideal.
+            Entendemos o que realmente acontece, identificamos gargalos
+            e redesenhamos o fluxo ideal.
           </p>
         </div>
 
@@ -70,6 +74,7 @@
         </div>
       </section>
 
+      <!-- FOOTER -->
       <footer class="footerSection" id="contato">
         <h3 class="footerTitle">NexCX</h3>
         <p class="footerText">
@@ -80,8 +85,9 @@
     </div>
   </div>
 
+  <!-- BOTÃO VOLTAR AO TOPO -->
   <button id="backToTop" aria-label="Voltar ao topo">↑</button>
 
-  <script src="script.js?v=20251221-2100"></script>
+  <script src="script.js"></script>
 </body>
 </html>
