fix backToTop js

--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
   <!-- BOTÃO VOLTAR AO TOPO -->
   <button id="backToTop" aria-label="Voltar ao topo">↑</button>
 
-  <script src="script.js"></script>
+  <script src="script.js?v=20251221-2145"></script>
 </body>
 </html>
