fix layout + button + spacing

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NexCX</title>
 
-  <!-- força atualização -->
-  <link rel="stylesheet" href="style.css?v=5">
+  <!-- CSS -->
+  <link rel="stylesheet" href="./style.css?v=FINAL">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
       <section class="hero">
         <div class="heroImageWrap">
           <img
-            src="assets/images/collage.png?v=5"
+            src="./assets/images/collage.png?v=FINAL"
             alt="Colagem NexCX"
             class="heroImage"
           />
@@ -30,7 +30,6 @@
             TRANSFORMAR SUA<br>
             EMPRESA?
           </h1>
-
           <div class="heroArrow">↓</div>
         </div>
       </section>
@@ -88,6 +87,7 @@
   <!-- BOTÃO VOLTAR AO TOPO -->
   <button id="backToTop" aria-label="Voltar ao topo">↑</button>
 
-  <script src="script.js?v=20251221-2145"></script>
+  <!-- JS -->
+  <script src="./script.js?v=FINAL"></script>
 </body>
 </html>
