fix structure html css js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>NexCX</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="./style.css?v=FINAL">
+  <link rel="stylesheet" href="style.css?v=FINAL">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
       <section class="hero">
         <div class="heroImageWrap">
           <img
-            src="./assets/images/collage.png?v=FINAL"
+            src="assets/images/collage.png?v=FINAL"
             alt="Colagem NexCX"
             class="heroImage"
           />
@@ -47,9 +47,7 @@
             aponta riscos, sugere rotas e ajusta o trajeto.
           </p>
 
-          <a href="#contato" class="whiteCta">
-            Vamos conversar
-          </a>
+          <a href="#contato" class="whiteCta">Vamos conversar</a>
         </div>
       </section>
 
@@ -88,6 +86,6 @@
   <button id="backToTop" aria-label="Voltar ao topo">↑</button>
 
   <!-- JS -->
-  <script src="./script.js?v=FINAL"></script>
+  <script src="script.js?v=FINAL"></script>
 </body>
 </html>
