add back to top arrow button

--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
   </div>
 
   <!-- BOTÃO VOLTAR AO TOPO -->
-  <button id="backToTop" aria-label="Voltar ao topo" title="Voltar ao topo">↑</button>
+  <button id="backToTop" aria-label="Voltar ao topo">
+  ↑
+</button>
 
-  <script src="script.js?v=6" defer></script>
 </body>
 </html>
